Traccar/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: traccar
  namespace: default
  labels:
    app: traccar
spec:
  ports:
    - name: web-portal
      protocol: TCP
      port: 80
      targetPort: 8082    
  selector:
    app: traccar
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: traccar-svc
  namespace: default
  labels:
    app: "traccar"
spec:
  ports:
  - name: device
    port: 5023
    protocol: TCP
    targetPort: 5023
  - name: osmand
    port: 5055
    protocol: TCP
    targetPort: 5055   
  selector:
    app: traccar
  type: "LoadBalancer"
  loadBalancerIP: ""
