Traccar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traccar
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: traccar.trellaservices.com
    http:
      paths:     
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traccar
                port:
                  number: 80
  - host: traccar-device.trellaservices.com
    http:
      paths:     
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traccar
                port:
                  number: 5023
